# coachBotBack

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  gitignore  poetry.toml  pyproject.toml  pytest.ini  run_tests.ps1
.github/workflows/: pr-checks.yml
docker/api/: Dockerfile
docker/database/: Dockerfile
docker/frontend/: Dockerfile
docker/monitoring/grafana/: Dockerfile
docker/monitoring/loki/: Dockerfile
docker/monitoring/prometheus/: Dockerfile
docker/worker/: Dockerfile
scripts/: pre_commit.sh  test_api.py  test_flow.py
src/: __main__.py  main.py
src/api/: README.md  pyproject.toml  wait-for-it.sh
src/api/app/: __main__.py  db.py  main.py
src/api/core/: db.py  logging_config.py  main.py  services.py  utils.py
src/api/tests/: conftest.py  test_main.py  test_services.py
src/chatBack/api/: __main__.py  main.py
src/chatBack/api/tests/: test_main.py
src/common/db/: connect.py  crud.py  db.py  models.py  schemas.py
src/db/: README.md  alembic.ini  init-db.sh  init.sh  pyproject.toml
src/db/alembic/: env.py
src/db/app/: crud.py  database.py  init_db.py  models.py  schemas.py
src/db/config/: pg_hba.conf  postgresql.conf
src/db/core/: crud.py  database.py  db.py  init_db.py  models.py  schemas.py
src/db/migrations/: README  env.py
src/db/migrations/scripts/: init-db.sh
src/db/migrations/versions/: 5c80e2d2ca9c_initial_migration.py  initial_migration.py
src/db/tests/: test_crud.py
src/frontend/: app.py  requirements.txt
src/monitoring/: README.md
src/monitoring/grafana/provisioning/datasources/: datasources.yml
src/monitoring/loki/: loki-config.yml
src/monitoring/prometheus/: prometheus.yml
src/worker/: README.md  pyproject.toml
src/worker/core/: main.py
src/worker/tests/: conftest.py  test_main.py
tests/: conftest.py  test_main.py
