[tool.poetry]
name = "coachbotback"
version = "0.1.0"
description = "Coach Bot Backend Services"
authors = ["Kaleb Sofer <kalebsofer@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.28"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.3"}
python-dotenv = "^1.0.1"
setuptools = "^75.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist"
]


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
