[tool.poetry]
name = "coach-bot-api"
version = "0.1.0"
description = "Coach Bot API Service"
authors = ["Kaleb Sofer <kalebsofer@gmail.com>"]
packages = [
    { include = "core" },
    { include = "db", from = "../.." }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.1"
openai = "^1.0.0"
stream-chat = "^4.0.0"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.3"}
gunicorn = "^21.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"
black = "^24.10.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5" 