[tool.poetry]
name = "coach-bot-db"
version = "0.1.0"
description = "Coach Bot Database Service"
authors = ["Kaleb Sofer <kalebsofer@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.3"}
python-dotenv = "^1.0.1"
aiosqlite = "^0.19.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist"
]
