[tool.poetry]
name = "coach-bot-worker"
version = "0.1.0"
description = "Coach Bot Worker Service"
authors = ["Kaleb Sofer <kalebsofer@gmail.com>"]
packages = [
    { include = "core" }
]

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.1"
python-dotenv = "^1.0.1"
openai = "^1.59.4"
stream-chat = "^4.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
pytest-cov = "^6.0.0"
black = "^24.10.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.pytest-asyncio]
scope = "function"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist"
]